Fixes for LiquidThreads NewMessages display. * Change selector for LHS edge to select topmost threads, rather than threads a direct child of #bodyContent, which breaks in the case of Special:NewMessages. * Fix display oddness caused by free-floating table width, force it to be 10em for the LHS, and the rest of the width for the RHS.

--- a/lqt.css
+++ b/lqt.css
@@ -324,7 +324,7 @@ div.lqt-post-sep {
 	margin-left: 2em;
 }
 
-#bodyContent > .lqt_thread,
+.lqt-thread-topmost,
 .lqt-thread-replies {
 	background-image: url(images/edge.png);
 	background-repeat: repeat-y;
@@ -479,4 +479,12 @@ ul.lqt-thread-toolbar-commands {
 .lqt-post-sep,
 .lqt-replies-finish {
 	clear: both;
+}
+
+table.lqt-new-messages {
+	width: 100%;
+}
+
+.mw-lqt-newmessages-left {
+	width: 10em	;
 }
